public/assets/css/main.css
@import './variables.css';

*, *::before, *::after {
    box-sizing: border-box;
}

*:not(dialog) {
    margin: 0;
}

body {
    font-family: var(--font-body), sans-serif;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    min-height: 100dvh;
    color: var(--text-primary);
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: var(--spacing-7) var(--spacing-4);
    gap: var(--spacing-5);
    max-width: 90rem;
    width: 100%;
    margin-inline: auto;
}

.product-info-page {
    max-width: 75rem;
    margin: 0 auto;
    width: 100%;
}

body, header, main {
    background-color: var(--background);
}

header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: var(--spacing-3) var(--spacing-4);
    border-bottom: 1px solid var(--border);
    align-items: center;
}

footer {
    background-color: var(--text-primary);
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--background);
    min-height: 60px;
}

nav ul {
    display: flex;
    align-items: center;
    list-style: none;
    gap: var(--spacing-5);
    font-size: 1.125rem;
}

a {
    text-decoration: none;
}

p {
    margin: 0.25rem;
}

a,
.logo,
nav,
.share-link,
.cart-icon,
.mobile-menu-toggle__icon,
.form-card__forgot-password {
    color: var(--primary-blue);
}

.logo, nav, h1, h2 {
    font-family: var(--font-heading), sans-serif;
}

h2, h3, nav, button, .toast__title, .primary-btn, .discounted-price, .product-card__title {
    font-weight: 600;
}

h1 {
    font-size: 2rem;
    font-weight: 700;
}

h2 {
    font-size: 1.5rem;
}

h3 {
    font-size: 1.25rem;
}

section {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-3);
}

nav a {
    font-size: 1.125rem;
}

a:active {
    color: var(--primary-blue-active);
}

a:hover {
    color: var(--primary-blue-hover);
}

.logo {
    font-size: 1.75rem;
    font-weight: 700;
    letter-spacing: 0.0625rem;
}

button {
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
    font: inherit;
    color: inherit;
}

.primary-btn {
    background-color: var(--primary-blue);
    color: var(--background);
    padding: 1rem;
    width: fit-content;
    border-radius: 0.5rem;
}

.cart-btn {
    display: flex;
    gap: 0.5rem;
}

.carousel {
    display: flex;
    width: max-content;
    transform: translateX(var(--offset, 0px));
}

.carousel--animating {
    transition: 300ms ease;
}

.grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    gap: var(--spacing-4);
}

.product-card {
    background-color: var(--card-background);
    display: flex;
    flex-direction: column;
    gap: var(--spacing-3);
    border: 1px solid var(--border);
    padding: var(--spacing-2) var(--spacing-2) var(--spacing-3);
}

.product-card img {
    height: 24.375rem;
    width: 24.375rem;
    object-fit: cover;
    object-position: center;
}

.carousel-wrapper, .grid-wrapper {
    align-items: center;
    gap: var(--spacing-5);
}

.carousel-window {
    position: relative;
    overflow: hidden;
    width: 100%;
}

.carousel:has(.loading-state) {
    width: 100%;
    justify-content: center;
}

.carousel__item {
    width: 25rem;
    aspect-ratio: 1 / 1;
    flex-shrink: 0;
    margin-right: var(--spacing-4);
}

.carousel__item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.carousel__btn--prev, .carousel__btn--next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    z-index: 1;
    background-color: var(--background);
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    border: 0.25rem solid var(--text-primary);
    transform: translateY(-50%);
}

.carousel__btn--prev:hover, .carousel__btn--next:hover {
    color: inherit;
}

.carousel__btn--prev {
    left: var(--spacing-3);
}
.carousel__btn--next {
    right: var(--spacing-3);
}

.product-info {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: var(--spacing-7);
}

.product-info img {
    width: 24.375rem;
    height: 24.375rem;
    object-fit: cover;
}

.product-info__content {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-3);
}

.product-info__content h1 {
    margin-top: 1rem;
}

.product-info__price-ratings {
    display: flex;
    gap: var(--spacing-2);
}

.product-reviews {
    max-width: 50%;
}

.product-review {
    border-top: 1px solid var(--border);
    padding-top: var(--spacing-3);
}

.product-tags {
    display: flex;
    gap: var(--spacing-2);
}

.product-tags__tag {
    background-color: var(--border);
    color: #000;
    border-radius: 0.5rem;
    padding: 0.5rem;
}

.original-price {
    color: var(--text-secondary);
    text-decoration: line-through;
}

.product-review__row {
    display: flex;
    align-items: center;
    gap: var(--spacing-2);
}

.ratings {
    display: flex;
    color: var(--star-icon);
    gap: 0.25rem;
}

.share-link {
    display: flex;
    gap: var(--spacing-1);
    align-items: center;
    cursor: pointer;
}

.share-link--copied {
    color: var(--text-secondary);
    cursor: unset;
}

.cart-icon,
.mobile-menu-toggle__icon {
    font-size: 1.5rem;
}

.mobile-menu-toggle {
    display: none;
    background-color: transparent;
    border: none;
    cursor: pointer;
}

.mobile-nav {
    display: none;
    width: 100%;
}

.mobile-nav--open {
    display: none;
    flex-direction: column;
    align-items: flex-end;
    padding: var(--spacing-3) var(--spacing-2) var(--spacing-3) 0;
    margin-top: var(--spacing-2);
    gap: var(--spacing-3);
}

.mobile-nav--open a {
    display: flex;
    align-items: center;
    gap: var(--spacing-1);
    font-size: 1rem;
}

.toast-wrapper {
    display: flex;
    width: 22rem;
    min-height: 5rem;
    z-index: 1;
    background-color: var(--card-background);
    position: fixed;
    right: 0;
}

.toast__indicator {
    width: 0.5rem;
    align-self: stretch;
    flex-shrink: 0;
}

.toast--success {
    background-color: var(--success);
}

.toast--error {
    background-color: var(--error);
}

.toast__icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    overflow: hidden;
    font-size: 0.75rem;
    color: var(--background);
    flex-shrink: 0;
}

.toast__icon.toast--success {
    background-color: var(--success);
}

.toast__icon.toast--error {
    background-color: var(--error);
}

.toast__content {
    display: flex;
    align-items: center;
    padding: var(--spacing-3);
    gap: var(--spacing-3);
}

.toast__text {
    display: flex;
    flex-direction: column;
}

.product-description, .toast__message, .ratings__count {
    color: var(--text-secondary);
}

.toast-wrapper > button {
    all: unset;
    cursor: pointer;
    position: absolute;
    top: var(--spacing-2);
    right: var(--spacing-2);
    color: var(--text-secondary);
}

.loading-state {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-2);
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.loading-state__spinner {
    width: 7.5rem;
    height: 7.5rem;
    border: 8px solid var(--text-secondary);
    border-top-color: var(--primary-blue);
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

.signin-wrapper, .signup-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
}

.form-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--spacing-4);
    width: 30rem;
    border: 1px solid var(--border);
    padding: var(--spacing-4);
}

.form-card__row {
    display: flex;
    gap: var(--spacing-2);
    justify-content: space-between;
    width: 100%;
}

.form-card__inline {
    display: flex;
    gap: var(--spacing-1);
    align-items: center;
}

.form-card .primary-btn {
    width: 100%;
}

.input-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--spacing-2);
    width: 100%;
}

input:not([type="checkbox"]) {
    padding: var(--spacing-2);
    background-color: var(--card-background);
    border: 1px solid var(--border);
    width: 100%;
    border-radius: 0.5rem;
}

.input-wrapper__label {
    font-weight: 600;
}

input.input-wrapper__input--error {
    border: 1px solid var(--error);
}

.input-wrapper__error {
    color: var(--error);
}

@keyframes spin {
    to { transform: rotate(360deg); }
}

@media (max-width: 1024px) {
    .carousel__item {
        width: 18.75rem;
    }

    .grid {
        grid-template-columns: repeat(2, 1fr);
        gap: var(--spacing-3);
    }
}

@media (max-width: 768px) {
    body {
        font-size: 14px;
    }
    
    header {
        padding: var(--spacing-2);
    }
    
    main {
        padding: var(--spacing-6) var(--spacing-3);
        gap: var(--spacing-4);
    }

    .desktop-menu {
        display: none;
    }
    
    .mobile-menu-toggle {
        display: block;
    }

    .mobile-nav--open {
        display: flex;
    }

    .logo {
        font-size: 1.5rem;
    }

    h1 {
        font-size: 1.75rem;
    }

    h2 {
        font-size: 1.25rem;
    }
    
    h3 {
        font-size: 1.125rem;
    }
    
    p, button {
        font-size: 0.875rem;
    }
    
    nav a {
        font-size: 0.875rem;
    }
    
    .product-info__content {
        gap: var(--spacing-2);
    }

    .product-info {
        flex-direction: column;
        gap: 0;
    }

    .product-info.loading-state {
        gap: var(--spacing-2);
    }

    .product-info img {
        width: 15.625rem;
        height: 15.625rem;
    }
    
    .ratings {
        font-size: 0.875rem;
    }
    
    .product-tags {
        font-size: 0.875rem;
    }
    
    .product-tags__tag {
        padding: var(--spacing-1);
    }
    
    .product-reviews {
        gap: var(--spacing-2);
        max-width: 100%;
    }
    
    .product-review {
        padding-top: var(--spacing-2);
    }

    .toast-wrapper {
        width: 100%;
        top: var(--spacing-7);
        right: 0;
    }
    
    .loading-state__spinner {
        width: 5rem;
        height: 5rem;
    }

    .carousel-wrapper {
        gap: var(--spacing-4);
    }

    .carousel__item {
        width: 15.625rem;
        margin-right: var(--spacing-3);
    }

    .carousel__btn--prev {
        left: var(--spacing-2);
    }

    .carousel__btn--next {
        right: var(--spacing-2);
    }
    
    .product-card {
        width: 11rem;
    }

    .product-card img {
        height: 10rem;
        width: 10rem;
        object-fit: cover;
        object-position: center;
    }
    
    .product-card .product-review__row {
        flex-direction: column;
        align-items: normal;
    }
}

@media (max-width: 480px) {
    .grid {
        grid-template-columns: repeat(1, minmax(0, 1fr));
    }
}

